--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
@@ -41,4 +41,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.0.1'
     compile project(':scrollablelayoutlib')
     compile files('libs/zixing-core-3.2.0.jar')
+    compile files('libs/AMapSearch_3.2.1_AMapLocation_2.4.1_20160425.jar')
 }
