--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -20,6 +28,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="036f4617199ab275a1bc93d10168cfcc" />
+        <!-- 定位需要的服务 -->
+        <service android:name="com.amap.api.location.APSService" >
+        </service>
+
         <activity
             android:name=".ui.UIActivity"
             android:label="@string/app_name"
@@ -35,13 +51,15 @@
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.UpdateActivity" />
         <activity android:name=".ui.MyMainActivity" />
-        <activity android:name=".ui.PublishedActivity" />
         <activity android:name=".ui.PhotoActivity" />
         <activity android:name=".ui.ImageGridActivity" />
         <activity android:name=".ui.ModleActivity"></activity>
         <activity android:name=".ui.ArticleDetailActivity" />
         <activity android:name=".zxing.android.CaptureActivity"/>
+        <activity android:name=".ui.LocationActivity"/>
+        <activity android:name=".ui.PublishedActivity"/>
         <activity android:name=".ui.PhotoActivity1"/>
+
         <service
             android:name=".auth.UserAccountService"
             tools:ignore="ExportedService">
